--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-    background-color: rgb(99, 83, 83);
+    background-color: white;
 }
 
 #nav-content {
@@ -36,7 +36,7 @@ body {
 }
 
 #text {
-    color: white;
+    color: black;
     text-align: end;
 }
 
