--- a/style.css
+++ b/style.css
@@ -48,7 +48,9 @@ h3 {
     border-radius: 15%;
     height: 180px;
     width: 250px;
-    padding: 20px;
+    margin: 20px;
+    border: blue solid 3px;
+    box-shadow: inset;
 
     
 }
@@ -57,7 +59,28 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     /* align-items: center; */
+    box-shadow: 15px;
     
+}
+
+button {
+    background-color: rgb(177, 73, 73);
+    color: white;
+    border-radius: 25px;
+
+}
+
+#button-position {
+
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+#project-title {
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
 }
 
 
