--- a/style.css
+++ b/style.css
@@ -7,9 +7,22 @@ body {
 
     color: white;
     background-color: gray;
-    display: flex;
-    justify-content: space-evenly;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#name {
+    display: flex;
+    justify-content: start;
+    text-align: center;
+}
+
+#nav-links {
+    display: flex;
+    justify-content: right;
+}
+
+.nav-links {
+    margin: 10px;
 }
 
 #nav-background {
