--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: white;
 }
 
-#nav-content {
+.nav-content {
 
     color: white;
     background-color: gray;
@@ -11,9 +11,14 @@ body {
 }
 
 #name {
+
+    text-align: left;
     display: flex;
-    justify-content: start;
-    text-align: center;
+    justify-content: bottom;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-decoration: solid;
+    
 }
 
 #nav-links {
@@ -22,7 +27,8 @@ body {
 }
 
 .nav-links {
-    margin: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #nav-background {
@@ -110,8 +116,8 @@ button {
     flex-direction: column;
 }
 
-#footer {
-    background-color: crimson;
+#Contact-Me {
+    background-color: gray;
     height: 60px;
     margin-top: 100px;
 }
