--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ body {
 #name {
 
     text-align: left;
-    display: flex;
-    justify-content: bottom;
+    /* display: flex;
+    justify-content: bottom; */
     margin-left: 10px;
     margin-right: 10px;
+    padding-top: 20px;
+    font-weight: 300px;
     text-decoration: solid;
     
 }
@@ -120,4 +122,15 @@ button {
     background-color: gray;
     height: 60px;
     margin-top: 100px;
+}
+
+h4 {
+    text-align: center;
+    align-items: center;
+    padding: 20px;
+}
+
+#icons {
+    display: flex;
+    justify-content: space-evenly;
 }
