--- a/style.css
+++ b/style.css
@@ -71,8 +71,21 @@ h3 {
     color: black;
     text-align: end;
     display: flex;
+
 }
 
+@media only screen and (max-width: 913px) {
+    #about {
+            flex-direction: column;
+            align-items: center;
+    }
+
+    #oscar {
+        min-width: 300px;
+        min-height: 300px;
+    }
+  }
+  
 #project-image {
     border-radius: 15%;
     height: 180px;
